<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/round_background_profile"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/profileClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_Image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/user_image3"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="5dp" />

        <TextView
            android:id="@+id/profile_Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/imamagun94_gmail_com"
            android:textAlignment="center"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/round_chat_background_to"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_TotalPeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/peoples"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_top_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_TotalMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@drawable/round_chat_background_from"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dhaka"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/profile_Log_Out_Button"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_button"
        android:text="LOG OUT"
        android:textColor="@color/colorWhite" />

</LinearLayout>