<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/round_background_profile"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/People_profile_Close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:text="@string/x"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/people_profile_Image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/user_image3"
            app:civ_border_color="@color/colorWhiteSmoke"
            app:civ_border_width="5dp" />

        <TextView
            android:id="@+id/people_profile_Username"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_button"
            android:paddingTop="15dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/people_profile_Email"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button"
            android:paddingTop="15dp"
            android:text="@string/imamagun94_gmail_com"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/people_new_age_bd"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:paddingTop="15dp"
            android:text="@string/newagebd"
            android:textAlignment="center"
            android:textColor="@color/colorWhiteSmoke"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>