<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signUpUsername"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SignUpProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/SignUpProfile"
        android:layout_width="135dp"
        android:layout_height="131dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/user_image3"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="5dp"
        app:layout_constraintEnd_toStartOf="@+id/uploadAProfilePicture"
        app:layout_constraintStart_toStartOf="@+id/signUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />

    <TextView
        android:id="@+id/uploadAProfilePicture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/upload_a_profile_picture_n_optional"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/SignUpProfile"
        app:layout_constraintEnd_toEndOf="@+id/signUpUsername"
        app:layout_constraintStart_toEndOf="@+id/SignUpProfile"
        app:layout_constraintTop_toTopOf="@+id/SignUpProfile" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpProfile" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorDarkSmoke"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="@+id/signUpUsername"
        app:layout_constraintStart_toStartOf="@+id/signUpUsername"
        app:layout_constraintTop_toBottomOf="@+id/signUpUsername" />


    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorDarkSmoke"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="@+id/SignUpEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/SignUpEmail" />

    <EditText
        android:id="@+id/signUpReTypePassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/retypepassword"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/re_type_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorDarkSmoke"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="@+id/signUpPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpPassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/signUpReTypePassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpReTypePassword"
        app:layout_constraintTop_toBottomOf="@+id/signUpReTypePassword" />

    <TextView
        android:id="@+id/alreadyHaveAnAccount"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorHintBlue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>