<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/logInTitle"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logInEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logInEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logInProfile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/login_profile6"
        app:layout_constraintEnd_toEndOf="@+id/logInEmail"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/logInEmail"
        app:layout_constraintTop_toBottomOf="@+id/logInTitle" />

    <EditText
        android:id="@+id/logInEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorDarkSmoke"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInProfile" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_background"
        android:drawableStart="@drawable/accesskey"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorDarkSmoke"
        android:textColorHint="@color/colorDarkSmoke"
        app:layout_constraintEnd_toEndOf="@+id/logInEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/logInEmail"
        app:layout_constraintTop_toBottomOf="@+id/logInEmail" />

    <CheckBox
        android:id="@+id/logInRemember"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorWhiteSmoke"
        android:checked="true"
        android:text="@string/remember"
        android:textColor="@color/colorWhiteSmoke"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorHint="@color/colorWhiteSmoke"
        android:textColorLink="@color/colorDarkSmoke"
        android:textCursorDrawable="@color/colorDarkSmoke"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toStartOf="@+id/logInForgetPassword"
        app:layout_constraintStart_toStartOf="@+id/logInPassword"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logInForgetPassword"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhiteSmoke"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toEndOf="@+id/logInPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/logInRemember"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/logInButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/round_button"
        android:text="@string/log_in"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logInPassword"
        app:layout_constraintStart_toStartOf="@+id/logInPassword"
        app:layout_constraintTop_toBottomOf="@+id/logInPassword" />

    <TextView
        android:id="@+id/doNotHaveAnAccount"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/colorHintBlue"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logInButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logInButton"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>